--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "babel-register": "^6.26.0",
     "clean-webpack-plugin": "^2.0.2",
     "css-loader": "^2.1.1",
+    "eslint": "^5.16.0",
+    "eslint-plugin-react": "^7.13.0",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
